// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component pagination should call onPageChange prop on click on any page 1`] = `
.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c17 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c26 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c28 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c30 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c9 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c9 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c24 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c24 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c29 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14 {
  display: block;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c11 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
}

.c11::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c12 {
  margin: 0;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c12::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c16 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c18 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c18 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c15 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
}

.c15:hover {
  z-index: 2;
}

.c15:nth-child(odd),
.c15:nth-child(odd) > * {
  background-color: #F7F8F9;
  color: #13181D;
}

.c15:nth-child(even),
.c15:nth-child(even) > * {
  background-color: #ffffff;
  color: #13181D;
}

.c15:not(:last-child) {
  border-bottom: 1px solid #C7D0D8;
}

.c21 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c21 li {
  margin: 0 0.4rem;
}

.c21 li:last-child {
  margin-right: 0.8rem;
}

.c21 li:first-child {
  margin-left: 0.8rem;
}

.c22 > li {
  margin: 0;
}

.c25 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #435465;
  background: #ffffff;
}

.c25:hover {
  cursor: pointer;
}

.c25:focus {
  outline: none;
}

.c25:disabled {
  cursor: not-allowed;
}

.c25:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c25:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c27 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #126AFA;
  background: #E7F0FF;
}

.c27:hover {
  cursor: pointer;
}

.c27:focus {
  outline: none;
}

.c27:disabled {
  cursor: not-allowed;
}

.c27:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c23 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
}

.c23:hover {
  cursor: pointer;
}

.c23:focus {
  outline: none;
}

.c23:disabled {
  cursor: not-allowed;
}

.c23 > .c8,
.c23 .c8 {
  padding: 0.4rem;
}

.c23 .c8 * {
  fill: #435465;
}

.c23:disabled {
  background: #ffffff;
}

.c23:disabled .c8 * {
  fill: #C7D0D8;
}

.c23:not(:disabled):hover {
  background: #F7F8F9;
}

.c23:not(:disabled):hover .c8 * {
  fill: #303C48;
}

.c23:not(:disabled):active {
  background: #eff2f4;
}

.c23:not(:disabled):active .c8 * {
  fill: #13181D;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  bottom: 0;
  z-index: 3;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c20 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c20 td > .c6 {
  line-height: 2rem;
  font-size: 1.2rem;
}

.c2 {
  display: block;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c4:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c4 .sc-fzqNqU {
  padding: 0;
}

.c10 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c5 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c5 .c8 * {
  fill: #435465;
}

.c5:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c5:hover .c8 * {
  fill: #303C48;
}

.c5:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c5:active .c8 * {
  fill: #13181D;
}

.c5 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c5 .c8 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c13 .c8 * {
  fill: #435465;
}

.c13:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c13:hover .c8 * {
  fill: #303C48;
}

.c13:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c13:active .c8 * {
  fill: #13181D;
}

.c13 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c13 .c8 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 > * {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    4
  </div>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4"
        >
          <button
            class="c5"
          >
            <h5
              class="c6 c7"
            >
              Name
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <span
            class="c6 c12"
          >
            Marks
          </span>
          <div
            class="c4"
          >
            <button
              class="c13"
            >
              <h5
                class="c6 c7"
              >
                Maths
              </h5>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
          <div
            class="c4"
          >
            <button
              class="c13"
            >
              <h5
                class="c6 c7"
              >
                Science
              </h5>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
        </th>
        <th
          class="c4"
        >
          <button
            class="c13"
          >
            <h5
              class="c6 c7"
            >
              Age
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
        >
          <button
            class="c5"
          >
            <h5
              class="c6 c7"
            >
              Passed
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
        >
          <button
            class="c13"
          >
            <h5
              class="c6 c7"
            >
              Rating
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c14"
    >
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Albus Percival Wulfric Brian Dumbledore"
          >
            Albus Percival Wulfric Brian Dumbledore
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="6"
            >
              6
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="5"
          >
            5
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Mary May"
          >
            Mary May
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="1"
          >
            1
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Christine Lobowski"
          >
            Christine Lobowski
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="42"
          >
            42
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Brendon Philips"
          >
            Brendon Philips
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="125"
          >
            125
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4.5"
          >
            4.5
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Margret Marmajuke"
          >
            Margret Marmajuke
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="7"
            >
              7
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="5"
            >
              5
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="16"
          >
            16
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Van Ng"
          >
            Van Ng
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="9"
            >
              9
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Duc Ng"
          >
            Duc Ng
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="3"
            >
              3
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c19"
    >
      <tr
        class="c20"
      >
        <td>
          <ul
            class="c21 c22"
          >
            <li>
              <button
                class="sc-fzomME c23"
                type="button"
              >
                <svg
                  class="c8 c24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
            </li>
            <li>
              <button
                class="sc-fzomME c25"
                type="button"
              >
                <h5
                  class="c6 c26"
                >
                  1
                </h5>
              </button>
            </li>
            <li>
              <button
                class="sc-fzomME c27"
                type="button"
              >
                <h5
                  class="c6 c28"
                >
                  2
                </h5>
              </button>
            </li>
            <li>
              <button
                class="sc-fzomME c25"
                type="button"
              >
                <h5
                  class="c6 c26"
                >
                  3
                </h5>
              </button>
            </li>
            <li>
              <div
                class="c29"
                id="medly-popover-wrapper"
              >
                <button
                  class="sc-fzomME c25"
                  type="button"
                >
                  <h5
                    class="c6 c26"
                  >
                    ...
                  </h5>
                </button>
              </div>
            </li>
            <li>
              <button
                class="sc-fzomME c25"
                type="button"
              >
                <h5
                  class="c6 c26"
                >
                  30
                </h5>
              </button>
            </li>
            <li>
              <button
                class="sc-fzomME c23"
                type="button"
              >
                <svg
                  class="c8 c24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </td>
        <td>
          <span
            class="c6 c17"
          >
            Viewing
          </span>
          <strong
            class="c6 c30"
          >
             11 - 20 
          </strong>
          <span
            class="c6 c17"
          >
            of
          </span>
          <strong
            class="c6 c30"
          >
             300 
          </strong>
          <span
            class="c6 c17"
          >
            Results
          </span>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component should render properly 1`] = `
.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c17 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c9 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c9 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c14 {
  display: block;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c11 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
}

.c11::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c12 {
  margin: 0;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c12::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c16 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c18 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c18 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c15 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
}

.c15:hover {
  z-index: 2;
}

.c15:nth-child(odd),
.c15:nth-child(odd) > * {
  background-color: #F7F8F9;
  color: #13181D;
}

.c15:nth-child(even),
.c15:nth-child(even) > * {
  background-color: #ffffff;
  color: #13181D;
}

.c15:not(:last-child) {
  border-bottom: 1px solid #C7D0D8;
}

.c2 {
  display: block;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c4:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c4 .sc-fzqNqU {
  padding: 0;
}

.c10 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c5 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c5 .c8 * {
  fill: #435465;
}

.c5:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c5:hover .c8 * {
  fill: #303C48;
}

.c5:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c5:active .c8 * {
  fill: #13181D;
}

.c5 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c5 .c8 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c13 .c8 * {
  fill: #435465;
}

.c13:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c13:hover .c8 * {
  fill: #303C48;
}

.c13:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c13:active .c8 * {
  fill: #13181D;
}

.c13 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c13 .c8 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 > * {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    4
  </div>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4"
        >
          <button
            class="c5"
          >
            <h5
              class="c6 c7"
            >
              Name
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <span
            class="c6 c12"
          >
            Marks
          </span>
          <div
            class="c4"
          >
            <button
              class="c13"
            >
              <h5
                class="c6 c7"
              >
                Maths
              </h5>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
          <div
            class="c4"
          >
            <button
              class="c13"
            >
              <h5
                class="c6 c7"
              >
                Science
              </h5>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
        </th>
        <th
          class="c4"
        >
          <button
            class="c13"
          >
            <h5
              class="c6 c7"
            >
              Age
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
        >
          <button
            class="c5"
          >
            <h5
              class="c6 c7"
            >
              Passed
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
        >
          <button
            class="c13"
          >
            <h5
              class="c6 c7"
            >
              Rating
            </h5>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c14"
    >
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Albus Percival Wulfric Brian Dumbledore"
          >
            Albus Percival Wulfric Brian Dumbledore
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="6"
            >
              6
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="5"
          >
            5
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Mary May"
          >
            Mary May
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="1"
          >
            1
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Christine Lobowski"
          >
            Christine Lobowski
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="42"
          >
            42
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Brendon Philips"
          >
            Brendon Philips
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="125"
          >
            125
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4.5"
          >
            4.5
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Margret Marmajuke"
          >
            Margret Marmajuke
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="7"
            >
              7
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="5"
            >
              5
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="16"
          >
            16
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Van Ng"
          >
            Van Ng
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="9"
            >
              9
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c15"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="Duc Ng"
          >
            Duc Ng
          </span>
        </td>
        <td
          class="c11"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c18"
          >
            <span
              class="c6 c17"
              title="3"
            >
              3
            </span>
          </div>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c16"
        >
          <span
            class="c6 c17"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c6 c17"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
